syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "common/proto/common.proto";

package eago.task;
option go_package = "taskpb";

service TaskService {
  // CallTask 调用任务
  rpc CallTask(CallTaskReq) returns (TaskUniqueId) {}
  // KillTask 结束任务
  rpc KillTask(TaskUniqueId) returns (google.protobuf.Empty) {}
  // PagedListTasks 列出所有任务-分页
  rpc PagedListTasks(eago.common.QueryWithPage) returns (PagedTasks) {}

  // SetResultStatus 设置任务结果状态
  rpc SetResultStatus(SetResultStatusReq) returns (google.protobuf.Empty) {}
  // GetResult 查看任务结果
  rpc GetResult(TaskUniqueId) returns (Result) {}

  // AppendTaskLog 追加任务日志
  rpc AppendTaskLog(stream AppendTaskLogReq) returns (stream google.protobuf.Empty) {}

  // PagedListSchedules 列出所有计划任务-分页
  rpc PagedListSchedules(eago.common.QueryWithPage) returns (PagedSchedules) {}

  // IsValidSrvToken 判断SrvToken是否合法
  rpc IsValidSrvToken(SrvTokenQuery) returns (google.protobuf.BoolValue) {}
}

message PagedTasks {
  repeated Task tasks = 1;
  uint32 page = 2;
  uint32 pages = 3;
  uint32 page_size = 4;
  uint32 total = 5;
}

message PagedSchedules {
  repeated Schedule schedules = 1;
  uint32 page = 2;
  uint32 pages = 3;
  uint32 page_size = 4;
  uint32 total = 5;
}

message Task {
  uint32 id = 1;
  string codename = 2;
  string formal_params = 3;
  string description = 4;
}

message Schedule {
  uint32 id = 1;
  string task_codename = 2;
  string expression = 3;
  int64 timeout = 4;
  string arguments = 5;
  bool disabled = 6;
}

message Result {
  string task_codename = 1;
  int32 status = 2;
  string caller = 3;
  string worker = 4;
  string start_at = 5;
  string end_at = 6;
}

message CallTaskReq {
  string task_codename = 1;
  int64 timeout = 2;
  string caller = 3;
  bytes arguments = 4;
}

message TaskUniqueId {
  string task_unique_id = 1;
}

message SetResultStatusReq {
  string task_unique_id = 1;
  int32 status = 2;
}

message AppendTaskLogReq {
  string task_unique_id = 1;
  string content = 2;
}

message SrvTokenQuery {
  string value = 1;
}
